--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ HTML:
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio de Makington SAINT-FLEUR</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -29,7 +29,7 @@ HTML:
             <a href="#" class="btn">Voir mes projets</a>
         </div>
         <div class="image">
-            <img src="/Aluno.png" alt="Illustration Développement Web">
+            <img src="Aluno.png" alt="Illustration Développement Web">
         </div>
     </section>
 
@@ -44,7 +44,7 @@ HTML:
                 <a href="#" class="btn">Télécharger mon CV</a>
             </div>
             <div class="about-image">
-                <img src="/Makington.png" alt="Photo de Makington">
+                <img src="Makington.png" alt="Photo de Makington">
             </div>
         </div>
     </section>
@@ -127,6 +127,6 @@ HTML:
         <p>&copy; 2025 Makington SAINT-FLEUR. Tous droits réservés.</p>
     </footer>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
