Fix liens CSS et JS

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ HTML:
             <div class="project-card">
                 <p>Un plan de maintenance préventive pour une génératrice Caterpillar avec un Dashboard associé</p>
                 <span>#Excel #Visualisation des données</span>
-                <a href="#" class="btn">Voir plus</a>
+                <a href="Makington_Saintfleur_CV_120325.pdf" class="btn">Voir plus</a>
             </div>
             <div class="project-card">
                 <p>Analyse de données avec Python et R en utilisant des techniques de statistiques descriptive</p>
