--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-HTML:
+<!--Mon site-->
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <title>Portfolio de Makington SAINT-FLEUR</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
 <body>
 
     <header>
